--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <section class="hero">
               <div class="hero__texto">
                 <h1 class="hero__h1">Sportify</h1>
-                <p class="hero__p"> te brinda una planificación completa para potenciarte en todos los aspectos.</p>
+                <p class="hero__p"> Brinda una planificación completa para potenciarte en todos los aspectos.</p>
                 <h2 class="hero__titulo"> <span class="resaltar1">¡Revolucionamos </span>  tus entrenamientos!</h2>
                 <button class="hero_BTN"><a class="btnhero__link" href="">¡Empeza ahora!</a></button>
               </div>
-              <img class="hero__img" src="./imagenes/imgHero.jpg" alt="">
+              <img class="hero__img" src="./imagenes/1244809.jpg" alt="">
           </section>
           <section class="servicios" id="servicios">
               <div class="gimnasios">
