--- a/login/login.html
+++ b/login/login.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sportify - Log In</title>
 </head>
 <body>
-    
+    <div class="card-container">
+        <article class="card">
+            <img class="card__image" src="../imagenes/1244809.jpg" alt="">
+            <img class="card__image" src="../imagenes/1244942.jpg" alt="">
+        </article>
+    </div>
+    <button class="hero_BTN"><a class="btnhero__link" href="">¡Empeza ahora!</a></button>
+
+
+
 </body>
 </html>
