--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
                 <h2 class="hero__titulo"> <span class="resaltar1">¡Revolucionamos </span>  tus entrenamientos!</h2>
                 <button class="hero_BTN"><a class="btnhero__link" href="">¡Empeza ahora!</a></button>
               </div>
-              <img class="hero__img" src="./imagenes/1244809.jpg" alt="">
+              <div class="card-container">
+                <article class="card">
+                    <img class="card__image" src="../imagenes/1244809.jpg" alt="">
+                    <img class="card__image" src="../imagenes/1244942.jpg" alt="">
+                </article>
+            </div>
           </section>
           <section class="servicios" id="servicios">
               <div class="gimnasios">
