--- a/register/register.html
+++ b/register/register.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Sportify - Registro</title>
 </head>
 <body>
-    
+  <div class="wrapper">
+      <header class="header">
+        <nav>
+            <input type="checkbox" name="menu-toogle" id="menu-toogle" class="menu-toogle">
+            <label for="menu-toogle" class="menu_Hamburguesa">
+                <div class="rayas"></div>
+                <div class="rayas"></div>
+                <div class="rayas"></div>
+            </label>
+            <div class="box_Menu">
+                <ul class="ul_Menu">
+                    <li class="li_Menu"><a href="./index.html"><i class="fa-solid fa-house"></i>   Inicio</a></li>
+                    <li class="li_Menu"><a href="#servicios">   Planes</a></li>
+                    <li class="li_Menu"><a href="./login/login.html">Ingresa</a></li>
+                    <li class="li_Menu"><a href="">Registrate</a></li> 
+                    <li class="li_Menu"><a href="#contacto">Contacto</a></li>
+                </ul>
+            </div>
+          </nav>
+          <a class="linklogo" href="#"><img class="logo" src="../imagenes/logo.png" alt=""></a>
+      </header>
+      <main class="main">
+         
+      </main>
+      <footer class="footer">
+        <h2>Sportify 2022 - Realizado por Diego Pinedo</h2>
+        <div class="redes">
+            <a href="https://www.instagram.com/diegopinedo/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/diegopinedoarc"><i class="fa-brands fa-github"></i></a>              
+        </div>
+      </footer>
+  </div>  
 </body>
 </html>
