--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
       </main>
       <footer class="footer">
-        <h2>Sportify 2022 - Realizado por Diego Pinedo</h2>
+        <h2 class="titufoot">Sportify 2022 - Realizado por Diego Pinedo</h2>
         <div class="redes">
             <a href="https://www.instagram.com/diegopinedo/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/diegopinedoarc"><i class="fa-brands fa-github"></i></a>              
