--- a/login/login.html
+++ b/login/login.html
@@ -21,39 +21,40 @@
             <div class="box_Menu">
                 <ul class="ul_Menu">
                     <li class="li_Menu"><a href="../index.html"><i class="fa-solid fa-house"></i>   Inicio</a></li>
-                    <li class="li_Menu"><a href="#servicios">   Planes</a></li>
+                    <li class="li_Menu"><a href="../index.html#servicios">   Planes</a></li>
                     <li class="li_Menu"><a href="./login/login.html">Ingresa</a></li>
-                    <li class="li_Menu"><a href="">Registrate</a></li> 
-                    <li class="li_Menu"><a href="#contacto">Contacto</a></li>
+                    <li class="li_Menu"><a href="../register/register.html">Registrate</a></li> 
+                    <li class="li_Menu"><a href="../index.html#contacto">Contacto</a></li>
                 </ul>
             </div>
           </nav>
-          <a class="linklogo" href="#"><img class="logo" src="../imagenes/logo.png" alt=""></a>
+          <a class="linklogo" href="../index.html"><img class="logo" src="../imagenes/logo.png" alt=""></a>
       </header>
       <main class="main">
         <div class="login">
           <div class="titus">
            <h1>Sportify</h1>
-           <h2>Ingresa a tu cuenta</h2>
+           
           </div>
            <div class="datos">
-             <input type="email" name="" id="mail" placeholder="Correo electrónico">
-             <input type="password" name="" id="pass" placeholder="Contraseña">
-             <button class="login__btn"><a href="../index.html">Ingresa</a></button>
+            <h2>Ingresa a tu cuenta</h2>
+             <input class="email" type="email" name="" id="mail" placeholder="Correo electrónico">
+             <input class="password" type="password" name="" id="pass" placeholder="Contraseña">
+             <button class="login__btn"><a class="linkbtns" href="../index.html">Ingresa</a></button>
              <div class="rec">
              <input type="checkbox" name="" id="check"> <label class="check" for="">Recordar contraseña</label>
             </div>
-            <h3>¿No tenes cuenta? <a href="">¡Registrate!</a></h3>
+            <h3>¿No tenes cuenta? <a class="regis" href="../register/register.html">¡Registrate!</a></h3>
            </div>
            <div class="otrosAcc">
-             <button class="acc__btn">Ingresa con <i class="fa-brands fa-google"></i></button>
-             <button class="acc__btn">Ingresa con <i class="fa-brands fa-facebook"></i></button>
+             <button class="acc__btn"><a class="linkbtns" href="https://www.google.com/">Ingresa con <i class="fa-brands fa-google"></i></a></button>
+             <button class="acc__btn"><a class="linkbtns" href="https://www.facebook.com/">Ingresa con <i class="fa-brands fa-facebook"></i></a></button>
            </div>
 
           </div>
       </main>
       <footer class="footer">
-        <h2>Sportify 2022 - Realizado por Diego Pinedo</h2>
+        <h2 class="titufoot">Sportify 2022 - Realizado por Diego Pinedo</h2>
         <div class="redes">
             <a href="https://www.instagram.com/diegopinedo/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/diegopinedoarc"><i class="fa-brands fa-github"></i></a>              
