--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li class="li_Menu"><a href="./index.html"><i class="fa-solid fa-house"></i>   Inicio</a></li>
                     <li class="li_Menu"><a href="#servicios">   Planes</a></li>
                     <li class="li_Menu"><a href="./login/login.html">Ingresa</a></li>
-                    <li class="li_Menu"><a href="">Registrate</a></li> 
+                    <li class="li_Menu"><a href="./register/register.html">Registrate</a></li> 
                     <li class="li_Menu"><a href="#contacto">Contacto</a></li>
                 </ul>
             </div>
@@ -55,6 +55,13 @@
                   <button class="btn__info2"><a class="linkinfo" href="#popup2"><i class="fa-solid fa-circle-plus"></i> Info</a></button>
               </div>
           </section>
+          <section class="entrenos">
+            <h2>Wods semanales gratuitos</h2>
+            <div class="tarjetas">
+                <div class="box"></div>
+            </div>
+
+        </section>
           <section class="contacto" id="contacto">
               <h2>Contactanos</h2>
               <input id="namecontact" type="text" placeholder="Nombre completo">
@@ -72,6 +79,7 @@
                     <h2>Gimnasios</h2>
                     <h3>Plan anual $100000</h3>
                     <p>Planes diseñados para los 7 dias de la semana durante los 365 dias del año. Con acceso a la web para todos tus atletas.</p>
+                    <button class="hero_BTN2"><a class="btnhero__link" href="">Contratar</a></button>
                 </div>
 
                 </div>
@@ -84,11 +92,13 @@
                     <h2>Individuales</h2>
                     <h3>Plan mensual $1000</h3>
                     <p>Plan personalizado segun tus aptitudes fisicas, con seguimiento de nuestros entrenadores.</p>
+                    <button class="hero_BTN2"><a class="btnhero__link"  href="">Contratar</a></button>
                 </div>
 
                 </div>
             </div>
         </div>
+     
       </main>
       <footer class="footer">
         <h2 class="titufoot">Sportify 2022 - Realizado por Diego Pinedo</h2>
