--- a/login/login.html
+++ b/login/login.html
@@ -22,7 +22,7 @@
                 <ul class="ul_Menu">
                     <li class="li_Menu"><a href="../index.html"><i class="fa-solid fa-house"></i>   Inicio</a></li>
                     <li class="li_Menu"><a href="../index.html#servicios">   Planes</a></li>
-                    <li class="li_Menu"><a href="./login/login.html">Ingresa</a></li>
+                    <li class="li_Menu"><a href="../login/login.html">Ingresa</a></li>
                     <li class="li_Menu"><a href="../register/register.html">Registrate</a></li> 
                     <li class="li_Menu"><a href="../index.html#contacto">Contacto</a></li>
                 </ul>
