--- a/index.html
+++ b/index.html
@@ -55,11 +55,38 @@
                   <button class="btn__info2"><a class="linkinfo" href="#popup2"><i class="fa-solid fa-circle-plus"></i> Info</a></button>
               </div>
           </section>
-          <section class="entrenos">
-            <h2>Wods semanales gratuitos</h2>
-            <div class="tarjetas">
-                <div class="box"></div>
+          <div class="tituloseparador">Nos eligen</div>
+          <section class="gallery">
+              
+            <div class="gallery__item">
+                <input type="radio" name="gallery" id="img-1" checked class="gallery__selector">
+                <img class="gallery__img" src="./imagenes/imagen1.jpg" alt="">
+                <label for="img-1" class="gallery__thumb">
+                    <img src="./imagenes/imagen1s.jpg" alt="">
+                </label>
             </div>
+            <div class="gallery__item">
+                <input type="radio" name="gallery" id="img-2" checked class="gallery__selector">
+                <img class="gallery__img" src="./imagenes/imagen2.jpg" alt="">
+                <label for="img-2" class="gallery__thumb">
+                    <img src="./imagenes/imagen2s.jpg" alt="">
+                </label>
+            </div>
+            <div class="gallery__item">
+                <input type="radio" name="gallery" id="img-3" checked class="gallery__selector">
+                <img class="gallery__img" src="./imagenes/imagen3.png" alt="">
+                <label for="img-3" class="gallery__thumb">
+                    <img src="./imagenes/imagen3s.png" alt="">
+                </label>
+            </div>
+            <div class="gallery__item">
+                <input type="radio" name="gallery" id="img-4" checked class="gallery__selector">
+                <img class="gallery__img" src="./imagenes/imagen4.png" alt="">
+                <label for="img-4" class="gallery__thumb">
+                    <img src="./imagenes/imagen4s.png" alt="">
+                </label>
+            </div>
+        </section>
 
         </section>
           <section class="contacto" id="contacto">
