--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 class="hero__h1">Sportify</h1>
                 <p class="hero__p"> Brinda una planificación completa para potenciarte en todos los aspectos.</p>
                 <h2 class="hero__titulo"> <span class="resaltar1">¡Revolucionamos </span>  tus entrenamientos!</h2>
-                <button class="hero_BTN"><a class="btnhero__link" href="">¡Empeza ahora!</a></button>
+                <button class="hero_BTN"><a class="btnhero__link" href="./register/register.html">¡Empeza ahora!</a></button>
               </div>
               <div class="card-container">
                 <article class="card">
@@ -55,7 +55,7 @@
                   <button class="btn__info2"><a class="linkinfo" href="#popup2"><i class="fa-solid fa-circle-plus"></i> Info</a></button>
               </div>
           </section>
-          <div class="tituloseparador">Nos eligen</div>
+          <div class="tituloseparador"><h2>Ponete en movimiento</h2></div>
           <section class="gallery">
               
             <div class="gallery__item">
