--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 class="hero__h1">Sportify</h1>
                 <p class="hero__p"> Brinda una planificación completa para potenciarte en todos los aspectos.</p>
                 <h2 class="hero__titulo"> <span class="resaltar1">¡Revolucionamos </span>  tus entrenamientos!</h2>
-                <button class="hero_BTN"><a class="btnhero__link" href="./register/register.html">¡Empeza ahora!</a></button>
+               <a class="btnhero__link" href="./login/login.html"><button class="hero_BTN">¡Empeza ahora!</button></a>
               </div>
               <div class="card-container">
                 <article class="card">
