--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <button class="btn__info2"><a class="linkinfo" href="#popup2"><i class="fa-solid fa-circle-plus"></i> Info</a></button>
               </div>
           </section>
-          <div class="tituloseparador"><h2>Ponete en movimiento</h2></div>
+          <div class="tituloseparador"><h2 class="tituseparador">¡Ponete en movimiento!</h2></div>
           <section class="gallery">
               
             <div class="gallery__item">
@@ -106,7 +106,7 @@
                     <h2>Gimnasios</h2>
                     <h3>Plan anual $100000</h3>
                     <p>Planes diseñados para los 7 dias de la semana durante los 365 dias del año. Con acceso a la web para todos tus atletas.</p>
-                    <button class="hero_BTN2"><a class="btnhero__link" href="">Contratar</a></button>
+                    <a class="btnhero__link"  href="./register/register.html"><button class="hero_BTN2">Contratar</button></a>
                 </div>
 
                 </div>
@@ -119,7 +119,7 @@
                     <h2>Individuales</h2>
                     <h3>Plan mensual $1000</h3>
                     <p>Plan personalizado segun tus aptitudes fisicas, con seguimiento de nuestros entrenadores.</p>
-                    <button class="hero_BTN2"><a class="btnhero__link"  href="">Contratar</a></button>
+                    <a class="btnhero__link"  href="./register/register.html"><button class="hero_BTN2">Contratar</button></a>
                 </div>
 
                 </div>
