--- a/register/register.html
+++ b/register/register.html
@@ -34,24 +34,25 @@
          <section class="registro">
              <h1>Sportify</h1>
              <h2>Completa el formulario de registro</h2>
-             <div class="name">
+             <div class="name"> 
                  <input type="text" placeholder="Nombre">
                  <input type="text" placeholder="Apellido">
              </div>
+             <div class="mailPass">
+                <input type="email" name="mail" id="mail" placeholder="Correo electrónico">
+                <input type="password" name="pass" id="pass" placeholder="Contraseña">
+            </div>
              <div class="ageGender">
-                 <label for="nacimiento">Fecha de nacimiento</label>
+                 <label class="nac" for="nacimiento">Fecha de nacimiento:</label>
              <input type="date" name="nacimiento" id="nacimiento">
              <label for="">Objetivo: <select name="objetivo" id="objetivo"><option value="Competir">Competir</option><option value="Bajar">Bajar peso</option><option value="Nobinario">Tonificar</option>
             <option value="Otro">Otro</option></select></label>
             </div>
-             <div class="mailPass">
-                 <input type="email" name="mail" id="mail" placeholder="Correo electrónico">
-                 <input type="password" name="pass" id="pass" placeholder="Contraseña">
-             </div>
+            
              <div class="pago">
                  <label for="metodo">Metodo de pago: <select name="metodo" id="metodo"><option value="credito">Tarjeta de credito</option> <option value="transferencia">Transferencia</option></select></label>
              </div>
-             <button class="hero_BTN"><a class="btnhero__link" href="../index.html">Inscribirme</a></button>
+             <a class="btnhero__link" href="../index.html"><button class="hero_BTN">Inscribirme</button></a>
 
            
          </section>
